--- a/src/sass/layout/_reviews.scss
+++ b/src/sass/layout/_reviews.scss
@@ -26,7 +26,7 @@
   display: inline-block;
   transition: background-color 0.6s ease;
 
-  cursor: url(../images/header/cursor.png), auto;
+  cursor: pointer;
 }
 
 .active,
