--- a/src/sass/utils/_lite-yt-embed.scss
+++ b/src/sass/utils/_lite-yt-embed.scss
@@ -5,7 +5,7 @@ lite-youtube {
   contain: content;
   background-position: center center;
   background-size: cover;
-  cursor: url(../images/header/cursor.png), auto;
+  cursor: pointer;
   max-width: 720px;
 }
 
@@ -47,7 +47,7 @@ lite-youtube > .lty-playbtn {
   width: 36px;
   height: 36px;
   position: absolute;
-  cursor: url(../images/header/cursor.png), auto;
+  cursor: pointer;
   transform: translate3d(-50%, -50%, 0);
   top: 50%;
   left: 50%;
